# RustWB

L0/view-service/: Cargo.toml  README.md  docker-compose.yml
L0/view-service/migrations/: V1_orders_init.sql  V2_payments_init.sql  V3_items_init.sql  V4_deliveries_init.sql
L0/view-service/src/: main.rs  schemas.rs
L1/: Cargo.toml
L3/: Cargo.toml
