[package]
name = "L1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossbeam doesn't support async 
crossbeam = "0.8"
flume = "0.11"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = "0.7.12"
dashmap = "6.0.1"

itertools = "0.13.0"
