[package]
name = "view-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
clap = { version = "4.5.16", features = ["derive"] }
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

itertools = "0.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
